--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ products.forEach(p => {
   card.className = 'card';
 
   // الرسالة الخاصة بالواتساب
-  const whatsappMessage = `مرحبا 👋، اريد المنتج: ${p.name} - السعر: ${p.price} IQD - الصورة: ${p.image}`;
+  const whatsappMessage = `مرحبا 👋، اريد المنتج: ${p.name} - السعر: ${p.price} IQD `;
 
   card.innerHTML = `
     <img src="${p.image}" alt="${p.name}">
